--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
     max-width: 40%;
-    font-family: "El Messiri", sans-serif;
+    /* font-family: "El Messiri", sans-serif; */
     color: #eee;
     text-align: center;
     margin: 30px auto;
