--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 body {
+    font-family: "El Messiri", sans-serif;
+    color: #eee;
+    text-align: center;
+    background-image: linear-gradient(to right bottom, #21325e, #9198e5);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: linear-gradient(to right bottom, #21325e, #9198e5);
 }
