commented duplicate style

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
     max-width: 40%;
     /* font-family: "El Messiri", sans-serif; */
-    color: #eee;
-    text-align: center;
+    /* color: #eee;
+    text-align: center; */
     margin: 30px auto;
     border: 1px solid #eeeeee;
     border-radius: 45px;
