--- a/src/Form.css
+++ b/src/Form.css
@@ -13,7 +13,7 @@
 .Form .search-city::placeholder {
     text-align: left;
     padding-left: 2px;
-    color: #eee;
+    color: #05275b;
 }
 .Form .search-city:focus-visible {
     outline: rgba(248, 249, 250, 0.5) solid 3px;
