--- a/src/SearchWeather.css
+++ b/src/SearchWeather.css
@@ -1,7 +1,7 @@
-.Form {
+.SearchWeather {
     margin: 20px auto;
 }
-.Form .search-city {
+.SearchWeather .search-city {
     line-height: normal;
     padding: 7px 2px;
     background-color: transparent;
@@ -10,15 +10,15 @@
     outline-offset: 0;
     color: #eee;
 }
-.Form .search-city::placeholder {
+.SearchWeather .search-city::placeholder {
     text-align: left;
     padding-left: 2px;
     color: #05275b;
 }
-.Form .search-city:focus-visible {
+.SearchWeather .search-city:focus-visible {
     outline: rgba(248, 249, 250, 0.5) solid 3px;
 }
-.Form .search-btn {
+.SearchWeather .search-btn {
     /* line-height: normal; */
     margin: 0 5px;
 }
