changed background color

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
     font-family: "El Messiri", sans-serif;
     color: #eee;
     text-align: center;
-    background-image: linear-gradient(to right bottom, #21325e, #9198e5);
+    background-image: linear-gradient(to right bottom, #4f88a5, #a1c1d2);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
